@@ -1,3 +1,11 @@
+Next version
+
+New feature: AI bomber is punching bombs when he is jammed by a bomb and picked up the punch item (by Markus Drescher)
+
+
+----------------------------
+
+
 Version 1.3.1
 
 Released on July 27, 2008
